tests/sksl/errors/InterfaceBlockStorageModifiers.dsl.glsl
### Compilation failed:

error: interface blocks are not yet supported
error: no type named 'foo'
2 errors
